syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.tesisaoskaunto.conversationassistantservice.grpc.proto";
option java_outer_classname = "ConversationAssistantProto";

service ConversationAssistantService {
  rpc GetAnswer (MessageRequest) returns (AnswerResponse);
}

message MessageRequest {
  string message = 1;
  string type = 2;
  string conversationId = 3;
}

message AnswerResponse {
  string answer = 1;
}