syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.tesisaoskaunto.messagesservice.grpc.proto";
option java_outer_classname = "MessagesProto";

service MessageService {
  rpc GetMessagesByConversationId (ConversationIdRequest) returns (MessageResponse);
}

message ConversationIdRequest {
  string conversationId = 1;
}

message MessageProto {
  int64 id = 1;
  string content = 2;
  string conversationId = 3;
  string createdAt = 4;
  string type = 5;
}

message MessageResponse {
  repeated MessageProto entities = 1;
}